File for map-site created

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DroneFood</title>
     <link rel="stylesheet" href="style.css">
+    <header>DroneFood Inc.</header>
   </head>
     <body>
+        <h1>Where would you like us to deliver your food?</h1>
+        <input type="text" id="Adress" name="Adress">
 	<script src="index.js"></script>
   </body>
     </head>
