--- a/map.html
+++ b/map.html
@@ -1,3 +1,7 @@
 !DOCTYPE <HTML>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DroneFood</title>
+    <link rel="stylesheet" href="map.css">
 </HTML>
