--- a/map.html
+++ b/map.html
@@ -1,7 +1,15 @@
-!DOCTYPE <HTML>
+<!DOCTYPE <HTML>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DroneFood</title>
     <link rel="stylesheet" href="map.css">
+    <header>DroneFood Inc.</header>
+    </head>
+    <body>
+        <h1>We are working on your order!</h1>
+
+    </body>
+    
 </HTML>
