Lite style fix :

--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE HTML>
-<HTML>
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DroneFood</title>
-    <link rel="stylesheet" href="style.css">
-    <header>DroneFood Inc.</header>
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>DroneFood</title>
+  <link rel="stylesheet" href="style.css">
+  <header>DroneFood Inc.</header>
+  <style>
+    .GFG {
+        background-color: rgb(153, 102, 204);
+        border: 2px solid black;
+        color: white;
+        padding: 5px 10px;
+        text-align: center;
+        display: inline-block;
+        font-size: 20px;
+        margin: 10px 30px;
+        cursor: pointer;
+        position:fixed; left:30px; top:200px;
+    }
+  </style>
   </head>
     <body>
-        <h1>Where would you like us to deliver your food?</h1>
-        <input type="text" id="Adress" name="Adress">
-	<script src="index.js"></script>
-  </body>
-    </head>
+      <h1>Where would you like us to deliver your food?</h1>
+      <input type="text" id="Adress" name="Adress">
+      <a href="map.html">
+        <button class="GFG">
+            StartSida
+        </button>
+      </a>
+
+
+	  <script src="index.js"></script>
+    </body>
+  </head>
 
 
 </HTML>
