Lite valmöjligheter till förstasidan

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>DroneFood</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <header>DroneFood Inc.</header>
   <style>
     .GFG {
@@ -17,7 +18,7 @@
         font-size: 20px;
         margin: 10px 30px;
         cursor: pointer;
-        position:fixed; left:30px; top:200px;
+        position:relative; right: 100px;
     }
   </style>
   </head>
@@ -34,6 +35,44 @@
 	  <script src="index.js"></script>
     </body>
   </head>
+    <div id="mat">
+      <div id="McDonald">
+        <p id="category-name">McDonald's</p>
+        <div id="item-card">
+          <div id="card-top">
+              <i class="fa-solid fa-star" id="rating"> 3 . 5</i>
+              <i class="fa-solid fa-cart-plus"></i>
+          </div>
+          <img src="Images/McDonalds.jpeg" alt=""> 
+          <p id="item-name">Burgare</p>
+          <p id="item-price">Prisklass: 2/5</p>
+        </div>
 
+      </div>
 
+      <div id="Max">
+        <p id="category-name">Max Hamburgare</p>
+        <div id="item-card">
+          <div id="card-top">
+            <i class="fa-solid fa-star" id="rating"> 4 . 0</i>
+            <i class="fa-solid fa-cart-plus"></i>
+          </div>
+          <img src="Images/Max.png"> 
+          <p id="item-name">Burgare</p>
+          <p id="item-price">Prisklass: 2/5</p>
+        </div>
+      </div>
+      <div id="Subway">
+        <p id="category-name">Subway</p>
+        <div id="item-card">
+          <div id="card-top">
+            <i class="fa-solid fa-star" id="rating"> 3 . 0</i>
+            <i class="fa-solid fa-cart-plus"></i>
+          </div>
+          <img src="Images/Subway.png"> 
+          <p id="item-name">Mackor</p>
+          <p id="item-price">Prisklass: 2/5</p>
+        </div>
+      </div>
+    </div>
 </HTML>
