--- a/map.html
+++ b/map.html
@@ -6,10 +6,17 @@
     <title>DroneFood</title>
     <link rel="stylesheet" href="map.css">
     <header>DroneFood Inc.</header>
+    <h1>We are working on your order!</h1>
     </head>
     <body>
-        <h1>We are working on your order!</h1>
-
+        <div class="menuPanel">
+            <ul>
+                <li>Account</li>
+                <li>Payment</li>
+                <li>Help</li>
+            </ul>
+            
+        </div>
     </body>
     
 </HTML>
