--- a/map.html
+++ b/map.html
@@ -17,13 +17,13 @@
             font-size: 20px;
             margin: 10px 30px;
             cursor: pointer;
-            position:fixed; left:30px; top:200px;
+            position:fixed; left:30px; top:20px;
         }
     </style>
     </head>
     <body>
         <h1>We are working on your order!</h1>
-        <div style = "position:fixed; left:150px; top:10px; background-color:0xF280A1;">
+        <div style = "position:fixed; left:200px; top:10px; right: 100px;background-color:0xF280A1;">
             <object id="map" data="images/lund-map.svg" type="image/svg+xml" ></object>
         </div>
 
@@ -32,6 +32,11 @@
                 StartSida
             </button>
         </a>
+
+    <div>
+        <h2 style="position:fixed;right: 200px; left:500px;top:80;font-size: medium;">Account</h2>
+        <h2 style="position:fixed;right: 200px; left:800px;top:80;font-size: medium;">Help</h2>
+        </div>
  
     </body>
     
