--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DroneFood</title>
     <link rel="stylesheet" href="map.css">
-    <header>DroneFood Inc.</header>
+    <headers style="text-align: left;">DroneFood Inc.</header>
     <style>
         .GFG {
             background-color: rgb(153, 102, 204);
@@ -23,7 +23,7 @@
     </head>
     <body>
         <h1>We are working on your order!</h1>
-        <div style = "position:fixed; left:200px; top:10px; right: 100px;background-color:0xF280A1;">
+        <div style = "position:fixed; left:200px; top:50px; right: 100px;background-color:0xF280A1;">
             <object id="map" data="images/lund-map.svg" type="image/svg+xml" ></object>
         </div>
 
@@ -33,10 +33,6 @@
             </button>
         </a>
 
-    <div>
-        <h2 style="position:fixed;right: 200px; left:500px;top:80;font-size: medium;">Account</h2>
-        <h2 style="position:fixed;right: 200px; left:800px;top:80;font-size: medium;">Help</h2>
-        </div>
  
     </body>
     
