Diverse fix på förstasidan

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       </a>
 
 
-	  <script src="index.js"></script>
+
     </body>
   </head>
+  <div id="Kundkorg">Kundkorg</div>
+  <div id="box" style="width:200px;height:500px;border:1px solid #000;"></div>
     <div id="mat">
       <div id="McDonald">
         <p id="category-name">McDonald's</p>
@@ -43,7 +45,7 @@
               <i class="fa-solid fa-star" id="rating"> 3 . 5</i>
               <i class="fa-solid fa-cart-plus"></i>
           </div>
-          <img src="Images/McDonalds.jpeg" alt=""> 
+          <img id="donk" src="Images/McDonalds.jpeg" onclick=test()> 
           <p id="item-name">Burgare</p>
           <p id="item-price">Prisklass: 2/5</p>
         </div>
@@ -57,7 +59,7 @@
             <i class="fa-solid fa-star" id="rating"> 4 . 0</i>
             <i class="fa-solid fa-cart-plus"></i>
           </div>
-          <img src="Images/Max.png"> 
+          <img id="MaxHamburgare" src="Images/Max.png"> 
           <p id="item-name">Burgare</p>
           <p id="item-price">Prisklass: 2/5</p>
         </div>
@@ -75,4 +77,5 @@
         </div>
       </div>
     </div>
+  <script src="index.js"></script>
 </HTML>
