--- a/map.html
+++ b/map.html
@@ -23,8 +23,8 @@
     </head>
     <body>
         <h1>We are working on your order!</h1>
-        <div style = "position:fixed; left:200px; top:50px; right: 100px;background-color:0xF280A1;">
-            <object id="map" data="images/lund-map.svg" type="image/svg+xml" ></object>
+        <div style = "position:fixed; left:450px; top:130px; right: 300px;background-color:0xF280A1;">
+            <object id="map" data="images/map2.svg" type="image/svg+xml" ></object>
         </div>
 
         <a href="index.html">
