--- a/map.html
+++ b/map.html
@@ -23,9 +23,10 @@
     </head>
     <body>
         <h1>We are working on your order!</h1>
-        <div style = "position:fixed; left:200px; top:50px; right: 100px;background-color:0xF280A1;">
+         
+       <!--  <div style = "position:fixed; left:200px; top:50px; right: 100px;background-color:0xF280A1;">
             <object id="map" data="images/lund-map.svg" type="image/svg+xml" ></object>
-        </div>
+        </div> -->
 
         <a href="index.html">
             <button class="GFG">
