--- a/index.html
+++ b/index.html
@@ -38,16 +38,23 @@
   <div id="Kundkorg">Kundkorg</div>
   <div id="box" style="width:200px;height:500px;border:1px solid #000;">
     <div id="slot1" value="0" style="width:180px;height:150px;border:1px solid #000;">
-          
+      <form id="form1">
+        <input id="number1" value="0"/>
+        <input type="button" onclick="test1()" value="Lägg till" id="knapp1" />
+     </form>
     </div>
     <div id="slot2" style="width:180px;height:150px;border:1px solid #000;">
-
+      <form id="form2">
+        <input id="number2" value="0"/>
+        <input type="button" onclick="test2()" value="Lägg till" id="knapp2" />
+     </form>
     </div>
     <div id="slot3" value="0" style="width:180px;height:150px;border:1px solid #000;">
-      <form id="form">
-        <input type="image" id="number" value="0"/>
-        <input type="button" onclick="test2()" value="Lägg till" id="knapp" />
+      <form id="form3">
+        <input id="number" value="0"/>
+        <input type="button" onclick="test3()" value="Lägg till" id="knapp3" />
      </form>
+     
     </div>
   </div>
     <div id="mat">
