--- a/map.html
+++ b/map.html
@@ -5,21 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DroneFood</title>
     <link rel="stylesheet" href="map.css">
-    <headers style="text-align: left;">DroneFood Inc.</header>
-    <style>
-        .GFG {
-            background-color: rgb(153, 102, 204);
-            border: 2px solid black;
-            color: white;
-            padding: 5px 10px;
-            text-align: center;
-            display: inline-block;
-            font-size: 20px;
-            margin: 10px 30px;
-            cursor: pointer;
-            position:fixed; left:30px; top:20px;
-        }
-    </style>
+    <header>DroneFood Inc.</header>
+   
     </head>
     <body>
         <h1>We are working on your order!</h1>
@@ -29,7 +16,7 @@
 
         <a href="index.html">
             <button class="GFG">
-                StartSida
+                Start
             </button>
         </a>
 
