--- a/map.html
+++ b/map.html
@@ -14,6 +14,8 @@
             <object id="map" data="images/map2.svg" type="image/svg+xml" ></object>
         </div>
 
+        <p id="minadress">Leveransadress: </p>
+
         <a href="index.html">
             <button class="GFG">
                 Start
@@ -22,5 +24,5 @@
 
  
     </body>
-    
+    <script src="map.js"></script>
 </HTML>
