--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
           <p id="BKläsk">BK läsk</p>
         </div>
       </div>
+      <div id="betalruta">    
+        <p id="pay">0</p> 
+        <p id="kr">kr</p>
+      </div>   
+      </div>
 
     </div>
   <script src="index.js"></script>
