--- a/map.html
+++ b/map.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DroneFood</title>
     <link rel="stylesheet" href="map.css">
+    
     <header>DroneFood Inc.</header>
    
     </head>
     <body>
         <h1>We are working on your order!</h1>
-        <div style = "position:fixed; left:450px; top:130px; right: 300px;background-color:0xF280A1;">
+        <div style = "position:absolute; left:450px; top:280px; right: 100px;background-color:0xF280A1;">
             <object id="map" data="images/map2.svg" type="image/svg+xml" ></object>
         </div>
 
@@ -22,7 +23,14 @@
             </button>
         </a>
 
+        <div id="menycopy"></div>
+
+
+        <div id="drone">
+            <img id="drönare" src="Images/drone3.png"> 
+        </div>
  
     </body>
     <script src="map.js"></script>
+
 </HTML>
