Klar på riktigt nu

--- a/map.html
+++ b/map.html
@@ -29,6 +29,9 @@
         <div id="drone">
             <img id="drönare" src="Images/drone3.png"> 
         </div>
+
+        <p id="done">Leveransen är framme!</p>
+        <p id="omw">Leveransen är påväg!</p>
  
     </body>
     <script src="map.js"></script>
